--- a/app/src/components/themeSwitcher/TS.module.scss
+++ b/app/src/components/themeSwitcher/TS.module.scss
@@ -1,38 +1,9 @@
-.toggle {
-  position: relative;
-  display: inline-block;
-  width: 50px;
-  height: 25px;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: background-color 0.2s ease;
-}
+.icon {
+  width: 30px;
+  height: 30px;
+  color: var(--accent-color);
 
-.toggle__circle {
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  width: 21px;
-  height: 21px;
-  border-radius: 50%;
-  background-color: #fff;
-  transition: transform 0.2s ease;
-}
-
-.toggle--dark {
-  background-color: #222;
-}
-
-.toggle--dark .toggle__circle {
-  transform: translateX(25px);
-  background-color: #333;
-}
-
-.toggle--light {
-  background-color: #fff;
-}
-
-.toggle--light .toggle__circle {
-  transform: translateX(0);
-  background-color: #f5f5f5;
+  &:hover {
+    cursor: pointer;
+  }
 }
