--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -1,5 +1,6 @@
 .light {
   --primary-color: #fea400;
+  --primary-hover-color: #fea50079;
   --accent-color: #d12f00;
   --background-color: #ddd;
   --text-color: #2e2e2e;
