--- a/app/src/components/StandardButton/SB.module.scss
+++ b/app/src/components/StandardButton/SB.module.scss
@@ -3,10 +3,9 @@
   color: var(--text-color);
   border: none;
   border-radius: 10px;
-  width: 75px;
-  height: 30px;
-  font-size: 1.1em;
-  margin: 5px;
+  margin: 10px;
+  padding: 7px;
+  font-size: 1.2em;
 
   &:hover {
     cursor: pointer;
