--- a/app/src/components/partials/header/header.module.scss
+++ b/app/src/components/partials/header/header.module.scss
@@ -7,6 +7,8 @@
   .banner {
     display: flex;
     align-items: center;
+    user-select: none;
+    cursor: pointer;
 
     * {
       margin: 3px;
