feat: add generic link component

--- a/app/src/components/LabeledInput/LI.module.scss
+++ b/app/src/components/LabeledInput/LI.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   margin: 6px;
   color: var(--text-primary-color);
+  user-select: none;
 
   input {
     border: 2px solid var(--primary-color);
