--- a/app/src/pages/register/index.module.scss
+++ b/app/src/pages/register/index.module.scss
@@ -21,6 +21,13 @@
       font-size: 0.7em;
     }
   }
+
+  .selects {
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+    margin-top: 20px;
+  }
   
   .form_bottom {
     width: 90%;
