--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -2,9 +2,10 @@
   --primary-color: #fea400;
   --primary-hover-color: #fea50079;
   --accent-color: #e27000;
-  --background-color: #eee;
+  --background-color: #f5f5f5;
   --background-form-color: #fff;
   --text-color: #2e2e2e;
+  --border-color: #2e2e2e43;
 }
 
 .dark {
